feat: created Navegation

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,15 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Bebas+Neue&family=Caesar+Dressing&family=Fjalla+One&family=Inter&family=Josefin+Sans&family=Montserrat+Alternates&family=Open+Sans:ital,wght@0,300;1,300;1,500&family=Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
     <title>Pic Pay</title>
   </head>
   <body>
     <div id="root"></div>
-    
   </body>
 </html>
